# ArtistOS

./: .gitignore  DEPLOYMENT_AND_ARCHITECTURE.md  QUICK_REFERENCE.sh  README.md  SETUP_COMPLETE.md  START_HERE.txt  docker-compose.yml  start.sh
backend/: README.md  pyproject.toml  start.sh
backend/app/: main.py
backend/app/connectors/: __init__.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  SETUP.md
frontend/: README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ads/: page.tsx
frontend/app/assistant/: page.tsx
frontend/app/content/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/revenue/: page.tsx
frontend/app/songs/: page.tsx
frontend/components/: Sidebar.tsx
