[tool.poetry]
name = "artist-os-backend"
version = "0.1.0"
description = "AI-powered operating system for managing independent music careers"
authors = ["Artist OS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
openai = "^1.3.0"
requests = "^2.31.0"
tenacity = "^8.2.3"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
